--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "element-ui": "^2.4.0",
+    "tinymce": "^4.7.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-tinymce-editor": "^1.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -40,10 +42,14 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.0.3",
+    "sass-resources-loader": "^1.3.3",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "tinymce": "^4.7.13",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
