--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.4.0",
+    "jquery": "^3.3.1",
+    "qs": "^6.5.2",
+    "s": "^0.1.1",
     "tinymce": "^4.7.13",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
