--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "d3": "^3.5.17",
     "element-ui": "^2.4.0",
+    "form-data": "^2.3.2",
     "jquery": "^3.3.1",
     "qs": "^6.5.2",
     "s": "^0.1.1",
